--- a/docs/gallery/gallery-sync.css
+++ b/docs/gallery/gallery-sync.css
@@ -663,19 +663,28 @@ h6 {
     white-space: nowrap;
     border-width: 0;
 }
+.pointer-events-none {
+    pointer-events: none;
+}
 .absolute {
     position: absolute;
 }
 .relative {
     position: relative;
 }
-.inset-y-1\/2 {
-    top: 50%;
-    bottom: 50%;
+.inset-0 {
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
 }
 .inset-x-0 {
     left: 0px;
     right: 0px;
+}
+.inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
 }
 .top-2\/4 {
     top: 50%;
@@ -686,14 +695,17 @@ h6 {
 .right-0 {
     right: 0px;
 }
-.-top-4 {
-    top: -1rem;
-}
 .top-0 {
     top: 0px;
 }
+.-top-4 {
+    top: -1rem;
+}
 .z-10 {
     z-index: 10;
+}
+.z-0 {
+    z-index: 0;
 }
 .z-20 {
     z-index: 20;
@@ -741,11 +753,23 @@ h6 {
 .mt-8 {
     margin-top: 2rem;
 }
-.mt-2 {
-    margin-top: 0.5rem;
+.mt-6 {
+    margin-top: 1.5rem;
 }
 .mt-4 {
     margin-top: 1rem;
+}
+.mt-2 {
+    margin-top: 0.5rem;
+}
+.mr-2 {
+    margin-right: 0.5rem;
+}
+.ml-3 {
+    margin-left: 0.75rem;
+}
+.mt-10 {
+    margin-top: 2.5rem;
 }
 .mt-12 {
     margin-top: 3rem;
@@ -765,9 +789,6 @@ h6 {
 .-mr-2 {
     margin-right: -0.5rem;
 }
-.mt-6 {
-    margin-top: 1.5rem;
-}
 .block {
     display: block;
 }
@@ -786,11 +807,14 @@ h6 {
 .hidden {
     display: none;
 }
-.h-6 {
-    height: 1.5rem;
+.h-5\/6 {
+    height: 83.333333%;
 }
 .h-full {
     height: 100%;
+}
+.h-6 {
+    height: 1.5rem;
 }
 .h-8 {
     height: 2rem;
@@ -846,14 +870,34 @@ h6 {
 .max-w-4xl {
     max-width: 56rem;
 }
+.max-w-md {
+    max-width: 28rem;
+}
+.max-w-lg {
+    max-width: 32rem;
+}
 .max-w-7xl {
     max-width: 80rem;
 }
 .max-w-xl {
     max-width: 36rem;
 }
+.flex-1 {
+    flex: 1 1 0%;
+}
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
 .origin-top-right {
     transform-origin: top right;
+}
+.translate-y-px {
+    --tw-translate-y: 1px;
+    transform: var(--tw-transform);
+}
+.-translate-y-1\/2 {
+    --tw-translate-y: -50%;
+    transform: var(--tw-transform);
 }
 .rotate-45 {
     --tw-rotate: 45deg;
@@ -885,6 +929,9 @@ h6 {
 }
 .flex-row {
     flex-direction: row;
+}
+.flex-col {
+    flex-direction: column;
 }
 .flex-wrap {
     flex-wrap: wrap;
@@ -998,8 +1045,22 @@ h6 {
 .rounded {
     border-radius: 0.25rem;
 }
+.rounded-t-lg {
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+.rounded-b-lg {
+    border-bottom-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
 .border {
     border-width: 1px;
+}
+.border-2 {
+    border-width: 2px;
+}
+.border-t-2 {
+    border-top-width: 2px;
 }
 .border-t {
     border-top-width: 1px;
@@ -1009,9 +1070,6 @@ h6 {
 }
 .border-l-2 {
     border-left-width: 2px;
-}
-.border-t-2 {
-    border-top-width: 2px;
 }
 .border-r-2 {
     border-right-width: 2px;
@@ -1024,8 +1082,16 @@ h6 {
     --tw-border-opacity: 1;
     border-color: rgba(31, 41, 55, var(--tw-border-opacity));
 }
+.border-gray-100 {
+    --tw-border-opacity: 1;
+    border-color: rgba(243, 244, 246, var(--tw-border-opacity));
+}
 .border-transparent {
     border-color: transparent;
+}
+.border-indigo-600 {
+    --tw-border-opacity: 1;
+    border-color: rgba(79, 70, 229, var(--tw-border-opacity));
 }
 .border-gray-700 {
     --tw-border-opacity: 1;
@@ -1035,13 +1101,29 @@ h6 {
     --tw-bg-opacity: 1;
     background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
-.bg-blue-100 {
+.bg-gray-100 {
     --tw-bg-opacity: 1;
-    background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
+    background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+.bg-gray-200 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 .bg-white {
     --tw-bg-opacity: 1;
     background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-gray-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.bg-indigo-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
+}
+.bg-blue-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
 .bg-indigo-500 {
     --tw-bg-opacity: 1;
@@ -1075,6 +1157,26 @@ h6 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
+.px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+.px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+}
+.py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+}
+.py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+.py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
 .px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
@@ -1087,10 +1189,6 @@ h6 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 }
-.py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-}
 .px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -1101,6 +1199,18 @@ h6 {
 }
 .pb-5 {
     padding-bottom: 1.25rem;
+}
+.pt-10 {
+    padding-top: 2.5rem;
+}
+.pb-10 {
+    padding-bottom: 2.5rem;
+}
+.pt-12 {
+    padding-top: 3rem;
+}
+.pb-8 {
+    padding-bottom: 2rem;
 }
 .pb-2 {
     padding-bottom: 0.5rem;
@@ -1158,13 +1268,21 @@ h6 {
     font-size: 2.25rem;
     line-height: 2.5rem;
 }
-.text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-}
 .text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+}
+.text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+}
+.text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+}
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
 }
 .font-bold {
     font-weight: 700;
@@ -1190,6 +1308,9 @@ h6 {
 .tracking-wider {
     letter-spacing: 0.05em;
 }
+.tracking-tight {
+    letter-spacing: -0.025em;
+}
 .text-white {
     --tw-text-opacity: 1;
     color: rgba(255, 255, 255, var(--tw-text-opacity));
@@ -1205,6 +1326,14 @@ h6 {
 .text-gray-500 {
     --tw-text-opacity: 1;
     color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.text-green-500 {
+    --tw-text-opacity: 1;
+    color: rgba(16, 185, 129, var(--tw-text-opacity));
+}
+.text-indigo-600 {
+    --tw-text-opacity: 1;
+    color: rgba(79, 70, 229, var(--tw-text-opacity));
 }
 .text-green-300 {
     --tw-text-opacity: 1;
@@ -1249,12 +1378,16 @@ h6 {
     --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-lg {
+    --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-md {
     --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-lg {
-    --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+.shadow-xl {
+    --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-1 {
@@ -1804,6 +1937,10 @@ body.hidden-scroll {
     --tw-bg-opacity: 1;
     background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
+.hover\:bg-indigo-700:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+}
 .hover\:bg-indigo-600:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
@@ -1890,6 +2027,10 @@ body.hidden-scroll {
     color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 @media (min-width: 640px) {
+    .sm\:-mx-6 {
+        margin-left: -1.5rem;
+        margin-right: -1.5rem;
+    }
     .sm\:mt-0 {
         margin-top: 0px;
     }
@@ -1905,13 +2046,28 @@ body.hidden-scroll {
     .sm\:flex-shrink-0 {
         flex-shrink: 0;
     }
+    .sm\:p-10 {
+        padding: 2.5rem;
+    }
     .sm\:px-6 {
         padding-left: 1.5rem;
         padding-right: 1.5rem;
     }
+    .sm\:px-10 {
+        padding-left: 2.5rem;
+        padding-right: 2.5rem;
+    }
+    .sm\:py-10 {
+        padding-top: 2.5rem;
+        padding-bottom: 2.5rem;
+    }
     .sm\:px-0 {
         padding-left: 0px;
         padding-right: 0px;
+    }
+    .sm\:text-6xl {
+        font-size: 3.75rem;
+        line-height: 1;
     }
 }
 @media (min-width: 768px) {
@@ -1921,12 +2077,49 @@ body.hidden-scroll {
     .md\:order-1 {
         order: 1;
     }
+    .md\:col-start-1 {
+        grid-column-start: 1;
+    }
+    .md\:col-start-3 {
+        grid-column-start: 3;
+    }
+    .md\:col-start-6 {
+        grid-column-start: 6;
+    }
+    .md\:col-end-3 {
+        grid-column-end: 3;
+    }
+    .md\:col-end-6 {
+        grid-column-end: 6;
+    }
+    .md\:col-end-8 {
+        grid-column-end: 8;
+    }
+    .md\:row-start-2 {
+        grid-row-start: 2;
+    }
+    .md\:row-start-1 {
+        grid-row-start: 1;
+    }
+    .md\:row-end-3 {
+        grid-row-end: 3;
+    }
+    .md\:row-end-4 {
+        grid-row-end: 4;
+    }
     .md\:float-right {
         float: right;
+    }
+    .md\:m-0 {
+        margin: 0px;
     }
     .md\:mx-4 {
         margin-left: 1rem;
         margin-right: 1rem;
+    }
+    .md\:mx-0 {
+        margin-left: 0px;
+        margin-right: 0px;
     }
     .md\:mt-28 {
         margin-top: 7rem;
@@ -1936,6 +2129,9 @@ body.hidden-scroll {
     }
     .md\:mb-8 {
         margin-bottom: 2rem;
+    }
+    .md\:mt-10 {
+        margin-top: 2.5rem;
     }
     .md\:mt-0 {
         margin-top: 0px;
@@ -1952,11 +2148,17 @@ body.hidden-scroll {
     .md\:hidden {
         display: none;
     }
+    .md\:h-2\/3 {
+        height: 66.666667%;
+    }
     .md\:h-12 {
         height: 3rem;
     }
     .md\:w-12 {
         width: 3rem;
+    }
+    .md\:max-w-none {
+        max-width: none;
     }
     .md\:flex-1 {
         flex: 1 1 0%;
@@ -1966,6 +2168,9 @@ body.hidden-scroll {
     }
     .md\:grid-cols-2 {
         grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+    .md\:grid-cols-7 {
+        grid-template-columns: repeat(7, minmax(0, 1fr));
     }
     .md\:items-center {
         align-items: center;
@@ -1984,9 +2189,33 @@ body.hidden-scroll {
         margin-right: calc(2.5rem * var(--tw-space-x-reverse));
         margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
     }
+    .md\:rounded-none {
+        border-radius: 0px;
+    }
+    .md\:rounded-l-lg {
+        border-top-left-radius: 0.5rem;
+        border-bottom-left-radius: 0.5rem;
+    }
+    .md\:rounded-r-lg {
+        border-top-right-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
+    }
+    .md\:p-6 {
+        padding: 1.5rem;
+    }
     .md\:px-0 {
         padding-left: 0px;
         padding-right: 0px;
+    }
+    .md\:px-8 {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    .md\:pt-20 {
+        padding-top: 5rem;
+    }
+    .md\:pb-20 {
+        padding-bottom: 5rem;
     }
     .md\:pt-5 {
         padding-top: 1.25rem;
@@ -1998,6 +2227,14 @@ body.hidden-scroll {
     .md\:text-3xl {
         font-size: 1.875rem;
         line-height: 2.25rem;
+    }
+    .md\:text-2xl {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+    .md\:text-4xl {
+        font-size: 2.25rem;
+        line-height: 2.5rem;
     }
 }
 @media (min-width: 1024px) {
@@ -2041,5 +2278,8 @@ body.hidden-scroll {
     }
     .xl\:gap-8 {
         gap: 2rem;
+    }
+    .xl\:p-10 {
+        padding: 2.5rem;
     }
 }
