--- a/pages/_includes/components/headings/section.njk
+++ b/pages/_includes/components/headings/section.njk
@@ -1,1 +1,4 @@
-<header class="text-center font-poppins text-sm md:text-3xl text-light">{{params.sub_title}} <span class="block font-fair font-bold tracking-wider text-xl md:text-6xl text-text">{{params.title}}</span></header>
+<header class="text-center font-poppins text-sm md:text-2xl text-light">
+    {{params.sub_title}}
+    <span class="block font-fair font-bold tracking-wider text-xl md:text-4xl text-text">{{params.title}}</span>
+</header>
