--- a/docs/gallery/gallery-sync.css
+++ b/docs/gallery/gallery-sync.css
@@ -713,9 +713,6 @@ h6 {
 .z-50 {
     z-index: 50;
 }
-.m-2 {
-    margin: 0.5rem;
-}
 .m-4 {
     margin: 1rem;
 }
@@ -1024,9 +1021,6 @@ h6 {
 .rounded-full {
     border-radius: 9999px;
 }
-.rounded-xl {
-    border-radius: 0.75rem;
-}
 .rounded-md {
     border-radius: 0.375rem;
 }
@@ -1268,10 +1262,6 @@ h6 {
     font-size: 0.875rem;
     line-height: 1.25rem;
 }
-.text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
 .text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1283,6 +1273,10 @@ h6 {
 .text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+}
+.text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
 }
 .text-3xl {
     font-size: 1.875rem;
@@ -1322,10 +1316,6 @@ h6 {
 .text-white {
     --tw-text-opacity: 1;
     color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-.text-gray-600 {
-    --tw-text-opacity: 1;
-    color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 .text-gray-900 {
     --tw-text-opacity: 1;
@@ -2174,11 +2164,11 @@ body.hidden-scroll {
     .md\:grid-cols-3 {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     }
-    .md\:grid-cols-2 {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
     .md\:grid-cols-7 {
         grid-template-columns: repeat(7, minmax(0, 1fr));
+    }
+    .md\:grid-cols-2 {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
     .md\:items-center {
         align-items: center;
@@ -2249,6 +2239,9 @@ body.hidden-scroll {
     .lg\:left-1\/2 {
         left: 50%;
     }
+    .lg\:col-span-2 {
+        grid-column: span 2 / span 2;
+    }
     .lg\:ml-0 {
         margin-left: 0px;
     }
@@ -2262,6 +2255,12 @@ body.hidden-scroll {
         --tw-translate-x: -50%;
         transform: var(--tw-transform);
     }
+    .lg\:grid-cols-3 {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+    .lg\:gap-8 {
+        gap: 2rem;
+    }
     .lg\:py-16 {
         padding-top: 4rem;
         padding-bottom: 4rem;
@@ -2272,20 +2271,8 @@ body.hidden-scroll {
     }
 }
 @media (min-width: 1280px) {
-    .xl\:col-span-2 {
-        grid-column: span 2 / span 2;
-    }
     .xl\:mt-0 {
         margin-top: 0px;
-    }
-    .xl\:grid {
-        display: grid;
-    }
-    .xl\:grid-cols-3 {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-    .xl\:gap-8 {
-        gap: 2rem;
     }
     .xl\:p-10 {
         padding: 2.5rem;
