--- a/docs/contact/contact-sync.css
+++ b/docs/contact/contact-sync.css
@@ -799,6 +799,9 @@ h6 {
 .hidden {
     display: none;
 }
+.h-4 {
+    height: 1rem;
+}
 .h-5\/6 {
     height: 83.333333%;
 }
@@ -807,9 +810,6 @@ h6 {
 }
 .h-6 {
     height: 1.5rem;
-}
-.h-4 {
-    height: 1rem;
 }
 .h-8 {
     height: 2rem;
@@ -826,14 +826,14 @@ h6 {
 .w-full {
     width: 100%;
 }
+.w-4 {
+    width: 1rem;
+}
 .w-16 {
     width: 4rem;
 }
 .w-6 {
     width: 1.5rem;
-}
-.w-4 {
-    width: 1rem;
 }
 .w-8 {
     width: 2rem;
@@ -1090,6 +1090,14 @@ h6 {
     --tw-border-opacity: 1;
     border-color: rgba(55, 65, 81, var(--tw-border-opacity));
 }
+.bg-gray-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+.bg-indigo-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
+}
 .bg-purple-600 {
     --tw-bg-opacity: 1;
     background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
@@ -1101,10 +1109,6 @@ h6 {
 .bg-green-500 {
     --tw-bg-opacity: 1;
     background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
-.bg-gray-100 {
-    --tw-bg-opacity: 1;
-    background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 .bg-gray-200 {
     --tw-bg-opacity: 1;
@@ -1136,6 +1140,9 @@ h6 {
 .bg-opacity-60 {
     --tw-bg-opacity: 0.6;
 }
+.p-4 {
+    padding: 1rem;
+}
 .p-6 {
     padding: 1.5rem;
 }
@@ -1146,9 +1153,21 @@ h6 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
 }
+.py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+}
+.px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+.py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
 }
 .py-2 {
     padding-top: 0.5rem;
@@ -1166,10 +1185,6 @@ h6 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
 }
-.py-1 {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-}
 .py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -1181,10 +1196,6 @@ h6 {
 .py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
-}
-.px-2 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
 }
 .px-5 {
     padding-left: 1.25rem;
@@ -1248,6 +1259,10 @@ h6 {
 .font-serif {
     font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
+.text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
 .text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1267,10 +1282,6 @@ h6 {
 .text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-}
-.text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
 }
 .text-3xl {
     font-size: 1.875rem;
@@ -1825,14 +1836,14 @@ h6 {
     .md\:flex-1 {
         flex: 1 1 0%;
     }
+    .md\:grid-cols-2 {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
     .md\:grid-cols-3 {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     }
     .md\:grid-cols-7 {
         grid-template-columns: repeat(7, minmax(0, 1fr));
-    }
-    .md\:grid-cols-2 {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
     .md\:items-center {
         align-items: center;
