--- a/pages/contact/contact.njk
+++ b/pages/contact/contact.njk
@@ -10,5 +10,29 @@ nickname: "Contact"
 {%- from "components/global-image.njk" import global_image -%}
 
 <div class="md:mt-28"></div>
-
-{{title}}
+<section class="max-w-6xl mx-auto">
+    {{component('headings/section', content)}}
+    <p class="text-center py-8 text-base px-4">{{content.copy}}</p>
+    <article class="py-10 px-4 grid ">
+        {{component('headings/h3', address.title)}}
+        {% set cls = cycler("odd", "even") %}
+        {% for loc in address.locations %}
+            <div class="{{'bg-gray-100' if cls.next()==='odd' else 'bg-indigo-100' }} grid md:grid-cols-2 gap-8 p-4">
+                <div>
+                    {{component('headings/h5', loc.title)}}
+                    <p class="text-base">{{loc.copy | safe}}</p>
+                    {% for ph in loc.phone%}
+                        <a href="tel:+88{{ph}}" class="transition duration-500 ease-in-out px-2 py-1 text-base no-underline flex items-center">
+                            <img src="images/phone_dark.svg" height="16" width="16" class="w-4 h-4"> &nbsp; {{ph}}
+                        </a>
+                    {% endfor %}
+                </div>
+                <div>
+                    {% if loc.has_map %}
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2626.2973474816563!2d91.97980800709871!3d21.423532032282743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e619a837865b7ea!2sRuposhi%20Bangla%20Restaurant!5e0!3m2!1sen!2sbd!4v1640178025354!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    {% endif %}
+                </div>
+            </div>
+        {% endfor %}
+    </article>
+</section>
