--- a/pages/_layouts/base.njk
+++ b/pages/_layouts/base.njk
@@ -75,14 +75,14 @@ ga_id: G-1FMY7MBKCX
   <meta name="twitter:site" content="@cruise-ship" />
   <meta name="twitter:title" content="Bay Cruise" />
   <meta name="twitter:description" content="Teknaf To Saint Martin Island Cruise Tour" />
-  <meta name="twitter:image" content="https://www.bay-cruises.com/images/logo.png" />
+  <meta name="twitter:image" content="https://www.bay-cruises.com/images/logo2.png" />
 
     <!-- facebook and other social sites -->
   <meta property="og:title" content="M.V. Bay Cruise | Ship " />
   <meta property="og:site_name" content="Bay Cruise" />
   <meta property="og:description" content="Teknaf To Saint Martin Island Cruise Tour" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://www.bay-cruises.com/images/logo.png" />
+  <meta property="og:image" content="https://www.bay-cruises.com/images/logo2.png" />
   <meta property="og:url" content="https://www.bay-cruises.com/" />
   <meta property="og:image:width" content="500" />
   <meta property="og:image:height" content="300" />
